chore(deploy): clean up src and prepare scale/perf/security for production
- gate DataCheckRunner with @Profile("dev") so it never runs on prod
- remove WebSocket debug/console logging from Notification component
- drop stale e2e artifacts (failed screenshots, Untitled) and ignore them
- add RoleAuthorizationGuard, WebSocketConnectionLimiter, perf profile and V4 scale/integrity migration
- tune prod/dev properties, render.yaml and vercel.json for deploy